--- a/index.html
+++ b/index.html
@@ -248,10 +248,16 @@ Lars is a fellow of the Akademie Musiktheater heute in the 2024–2026 selection
 
             <div class="content-section" id="geschichte">
                 <div class="content-with-images">
-                    <div class="content-text sticky right-align">operetta a capella by oscar strasnoy (2003) <br>
-oper graz 2023
-set&costumes: victor labarthe d'arnoux <br>
-                        lights: daniel weiss
+                    <div class="content-text sticky right-align">geschichte
+operetta a capella by oscar strasnoy, based on fragments from witold gombrowicz (2003)
+oper graz
+premiere 25.4.23
+director: lars marcel braun
+set & costumes: victor labarthe d’arnoux
+lights: daniel weiss
+dramaturgy: dorothee harpain
+w/ ana caseiro, ellen rose kelly, felix heuser, johannes wieners, harald hieronymus hein
+
 (video upon request)</div>
                     <div>
                         <div class="image-gallery with-sticky-text">
@@ -267,13 +273,18 @@ set&costumes: victor labarthe d'arnoux <br>
 
             <div class="content-section" id="la-traviata">
                 <div class="content-with-images">
-                    <div class="content-text sticky">opera in 3 acts
-staatstheater darmstadt 2022
-regie/set/video: karsten wiegand     
-                        regie mitarbeit: lars marcel braun
-                        costumes: alfred mayerhofer / veronika bischoff
-                        choreo: otto pichler
-(video upon request)</div>
+                    <div class="content-text sticky">la traviata
+opera in three acts by giuseppe verdi
+staatstheater darmstadt
+premiere 28.1.23
+conductor: daniel cohen
+director: karsten wiegand
+associate director: lars marcel braun
+costumes: alfred mayerhofer
+choreo: otto pichler
+dramaturgy: isabelle becker
+
+w/ hila baggio, cathrin lange, solgerd isalv, ingrid katzengruber, andres agudelo, matthew vickers, aluda todua, julian orlishausen, michael pegher, marco mondragón, david pichlmaier, jared ice, opernchor des staatstheaters darmstadt, statisterie des staatstheater darmstadt</div>
                     <div>
                         <div class="image-gallery with-sticky-text">
                             <img class="content-image" src="./websitepics/traviata1.jpg" alt="La Traviata production photo 1">
@@ -289,11 +300,15 @@ regie/set/video: karsten wiegand
 
             <div class="content-section" id="you-are-not">
                 <div class="content-with-images">
-                    <div class="content-text sticky right-align">immersive interdisciplinary installation with drag performers, patrick mason, dancers of ndt, live-cameras
-                        milkshake festival 2019 x pornceptual (westerpark amsterdam)
-set: victor labarthe d'arnoux                 
-                        lights: michiel knoop
-                        vj: zoey vero</div>
+                    <div class="content-text sticky right-align">you are not what you say i am
+immersive interdisciplinary installation
+milkshake festival 2019 x pornceptual
+concept, direction and video: lars marcel braun
+choreography: lars marcel braun in collaboration with all artists
+set: victor labarthe d’arnoux
+lights: michiel knoop
+vj: zoey vero
+w/ far too many drag performers to all name, patrick mason, dancers of ndt, etc.</div>
                     <div>
                         <div class="image-gallery with-sticky-text">
                             <img class="content-image" src="./websitepics/IMG_9403.jpg" alt="You Are Not installation photo 1">
@@ -308,11 +323,14 @@ set: victor labarthe d'arnoux
 
             <div class="content-section" id="slagroom">
                 <div class="content-with-images">
-                    <div class="content-text sticky">interactive installation with drag performers and live-cameras
-milkshake festival 2018 x pornceptual (westerpark amsterdam)
-set: victor labarthe d'arnoux 
-                        lights: marijn hubregtse
-                        vj: zoey vero</div>
+                    <div class="content-text sticky">slagroom
+interactive installation
+milkshake festival 2018 x pornceptual
+concept, direction and video: lars marcel braun
+set: victor labarthe d’arnoux
+lights: marijn hubgretse
+vj: zoey vero
+w/ all drag performers in attendance and guests of the festival</div>
                     <div>
                         <div class="image-gallery with-sticky-text">
                             <img class="content-image" src="./websitepics/milkshake-12.webp" alt="Slagroom installation photo 1">
