--- a/index.html
+++ b/index.html
@@ -350,16 +350,20 @@ w/ all drag performers in attendance and guests of the festival</div>
 
             <div class="content-section" id="humanoid">
                 <div class="content-with-images">
-                    <div class="content-text sticky">sci-fi oper by leonard evers (2018)
-                        semperoper dresden 2025
+                    <div class="content-text sticky">
+                        humanoid
+                        sci-fi oper by leonard evers with a libretto by pamela dürr (2018)
+                        semperoper dresden
+                        premiere 13.6.25
+                        conductor: chloé dufresne
+                        director: lars marcel braun
                         video: janic bebi
                         set: victor labarthe d'arnoux
                         costumes: selina tholl
                         dramaturgy: martin lühr
                         lights: marco dietzel
 
-                        conducted by chloé dufresne
-                        w/ sofia savenko, dominika škrabalova, jongwoo hong, johannes wieners, ks andreas scheibner, komparserie der semperoper
+                        w/ sofia savenko, dominika škrabalova, jongwoo hong, gerrit illenberger, johannes wieners, ks andreas scheibner, komparserie der semperoper
                     
                     </div>
                     <div>
