--- a/index.html
+++ b/index.html
@@ -67,17 +67,12 @@
 
         .content-section {
             display: none;
-            padding: 200px 40px 40px 40px;
+            padding: 40px 40px 40px 40px;
             min-height: 100vh;
         }
 
         .content-section.active {
             display: block;
-        }
-
-        /* Special styling for bio section to align with nav item */
-        #lars-marcel-braun {
-            padding-top: 20px;
         }
 
         /* New layout for sections with images */
@@ -178,11 +173,6 @@
                 min-height: auto;
             }
 
-            /* Reset bio section padding for mobile */
-            #lars-marcel-braun {
-                padding-top: 20px;
-            }
-
             .image-gallery {
                 max-width: 100%;
             }
@@ -253,7 +243,7 @@ operetta a capella by oscar strasnoy, based on fragments from witold gombrowicz 
 oper graz
 premiere 25.4.23
 director: lars marcel braun
-set & costumes: victor labarthe d’arnoux
+set & costumes: victor labarthe d'arnoux
 lights: daniel weiss
 dramaturgy: dorothee harpain
 w/ ana caseiro, ellen rose kelly, felix heuser, johannes wieners, harald hieronymus hein
@@ -305,7 +295,7 @@ immersive interdisciplinary installation
 milkshake festival 2019 x pornceptual
 concept, direction and video: lars marcel braun
 choreography: lars marcel braun in collaboration with all artists
-set: victor labarthe d’arnoux
+set: victor labarthe d'arnoux
 lights: michiel knoop
 vj: zoey vero
 w/ far too many drag performers to all name, patrick mason, dancers of ndt, etc.</div>
@@ -327,7 +317,7 @@ w/ far too many drag performers to all name, patrick mason, dancers of ndt, etc.
 interactive installation
 milkshake festival 2018 x pornceptual
 concept, direction and video: lars marcel braun
-set: victor labarthe d’arnoux
+set: victor labarthe d'arnoux
 lights: marijn hubgretse
 vj: zoey vero
 w/ all drag performers in attendance and guests of the festival</div>
