--- a/index.html
+++ b/index.html
@@ -228,11 +228,11 @@
 
         <main class="content-area">
             <div class="content-section" id="lars-marcel-braun">
-                <div class="content-text">Lars Marcel Braun (*1994 in Aachen; raised in Seoul, Oakland and Lexington) is a stage director working across opera, theatre, and visual arts. To finance his studies in physics, musicology, and Slavic literature in Zurich, he worked as an extra at the opera — an experience that exposed him to his first production and sparked his path into directing. After several internships and assistantships, he was appointed staff director at the Komische Oper Berlin from 2014 to 2017, personally selected by Barrie Kosky. Since then, he has worked as a freelance Spielleiter and artistic collaborator at major theatres across Europe. His practice has been shaped by collaborations with mentors including David Alden, Andreas Homoki, Eva-Maria Höckmayr, Jan-Philipp Gloger, Kirill Serebrennikov, Ted Huffmann, and Nanine Linning.
+                <div class="content-text">Lars Marcel Braun (*1994 in Aachen; raised in Seoul, Oakland and Lexington) is a stage director working across opera, theatre, and visual arts. To finance his studies in physics, musicology, and Slavic literature in Zurich, he worked as an extra at the opera — an experience that exposed him to theatre and sparked his path into directing. After several internships and assistantships, he was appointed staff director at the Komische Oper Berlin from 2014 to 2017, personally selected by Barrie Kosky. Since then, he has worked as a freelance assistant and associate at major theatres across Europe. His practice has been shaped by collaborations with mentors including David Alden, Andreas Homoki, Eva-Maria Höckmayr, Jan-Philipp Gloger, Kirill Serebrennikov, Ted Huffmann, and Nanine Linning.
 
-His own artistic projects include a series of immersive installations at Milkshake Festival in Amsterdam, blending nightlife aesthetics with theatrical interventions featuring drag performers. Recent works include acclaimed debuts at Semperoper Dresden and Oper Graz. The upcoming season features a world premiere in Graz during steirischer herbst and his first opera buffa at the Oldenburgisches Staatstheater.
+His own artistic projects include a series of immersive installations at Milkshake Festival in Amsterdam, blending nightlife aesthetics with theatrical interventions with drag performers. Recent works include acclaimed debuts at Semperoper Dresden and Oper Graz. The upcoming season is highlighted by a world premiere in Graz during steirischer herbst and his first opera buffa at Oldenburgisches Staatstheater.
 
-Lars is a fellow of the Akademie Musiktheater heute in the 2024–2026 selection.
+Lars is a fellow of Akademie Musiktheater heute in the 2024–2026 selection.
                 </div>
             </div>
 
@@ -366,6 +366,8 @@ w/ all drag performers in attendance and guests of the festival</div>
                             <iframe class="content-image" src="https://www.youtube.com/embed/HPpQgKOiwak?si=bCGk0XFLG5mZTA5k" title="Humanoid trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
                         </div>
+                                                <div class="credits with-sticky-text">*photos copyright sebastian hoppe*</div>
+
                     </div>
                 </div>
             </div>
