--- a/index.html
+++ b/index.html
@@ -234,6 +234,9 @@ His own artistic projects include a series of immersive installations at Milksha
 
 Lars is a fellow of Akademie Musiktheater heute in the 2024–2026 selection.
                 </div>
+                <div class="image-gallery">
+                    <img class="content-image" src="./websitepics/larsi2017.jpeg" alt="Lars Marcel Braun portrait">
+                </div>
             </div>
 
             <div class="content-section" id="geschichte">
