--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
             display: block;
         }
 
-        /* Special styling for portrait image - original size */
+        /* Special styling for portrait image - fit to text width */
         .content-image.portrait {
             width: auto;
             height: auto;
-            max-width: 100%;
-            object-fit: none;
+            max-width: 600px;
+            object-fit: contain;
         }
 
         .content-link {
@@ -192,9 +192,9 @@
                 object-fit: contain;
             }
 
-            /* Portrait image on mobile */
+            /* Portrait image on mobile - fit to screen width */
             .content-image.portrait {
-                width: 100%;
+                width: auto;
                 height: auto;
                 max-width: 100%;
                 object-fit: contain;
