--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ His own artistic projects include a series of immersive installations at Milksha
 Lars is a fellow of Akademie Musiktheater heute in the 2024–2026 selection.
                 </div>
                 <div class="image-gallery">
-                    <img class="content-image portrait" src="./websitepics/larsi2017.jpeg" alt="Lars Marcel Braun portrait">
+                    <img class="content-image portrait" src="./websitepics/IMG_011.jpg" alt="Lars Marcel Braun portrait">
                 </div>
             </div>
 
