--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
             scroll-snap-type: y mandatory;
             overflow-y: auto;
             height: 80vh;
+            padding: 40vh 0;
+            box-sizing: content-box;
         }
 
         .content-image {
@@ -285,7 +287,7 @@ His own artistic projects include a series of immersive installations at Milksha
 
 Lars is a fellow of Akademie Musiktheater heute in the 2024–2026 selection.
                 </div>
-                
+            
             </div>
 
             <div class="content-section" id="geschichte">
