--- a/index.html
+++ b/index.html
@@ -78,20 +78,22 @@
         /* Animation for images */
         .content-image, iframe {
             opacity: 0;
-            transition: opacity 0.8s ease-in-out;
+            transition: opacity 0.8s ease-in-out, transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         .content-section.active .content-image,
         .content-section.active iframe {
-            animation: fadeIn 0.8s ease-in-out 0.3s forwards;
+            animation: fadeInUp 0.8s ease-in-out 0.3s forwards;
         }
 
-        @keyframes fadeIn {
+        @keyframes fadeInUp {
             from {
                 opacity: 0;
+                transform: translateY(20px);
             }
             to {
                 opacity: 1;
+                transform: translateY(0);
             }
         }
 
@@ -136,7 +138,7 @@
             margin: 40px 0;
             display: flex;
             flex-direction: column;
-            gap: 30px;
+            gap: 60px;
             max-width: 600px;
         }
 
@@ -151,16 +153,42 @@
             height: 80vh;
             padding: 40vh 0;
             box-sizing: content-box;
+            scroll-behavior: smooth;
+        }
+
+        .image-gallery.with-sticky-text::-webkit-scrollbar {
+            width: 6px;
+        }
+
+        .image-gallery.with-sticky-text::-webkit-scrollbar-track {
+            background: transparent;
+        }
+
+        .image-gallery.with-sticky-text::-webkit-scrollbar-thumb {
+            background: rgba(0, 0, 0, 0.2);
+            border-radius: 3px;
+        }
+
+        .image-gallery.with-sticky-text::-webkit-scrollbar-thumb:hover {
+            background: rgba(0, 0, 0, 0.3);
         }
 
         .content-image {
             width: 100%;
             height: 400px;
             object-fit: cover;
-            border: 1px solid #ccc;
+            border: none;
             display: block;
             scroll-snap-align: center;
             scroll-snap-stop: always;
+            border-radius: 4px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .content-image:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
         }
 
         /* Special styling for portrait image - fit to text width */
@@ -171,6 +199,13 @@
             object-fit: contain;
             scroll-snap-align: center;
             scroll-snap-stop: always;
+            border-radius: 4px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+        }
+
+        .content-image.portrait:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
         }
 
         .content-link {
@@ -287,7 +322,7 @@ His own artistic projects include a series of immersive installations at Milksha
 
 Lars is a fellow of Akademie Musiktheater heute in the 2024–2026 selection.
                 </div>
-            
+                
             </div>
 
             <div class="content-section" id="geschichte">
