--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             margin: 40px 0;
             display: flex;
             flex-direction: column;
-            gap: 60px;
+            gap: 0;
             max-width: 600px;
         }
 
@@ -151,7 +151,7 @@
             scroll-snap-type: y mandatory;
             overflow-y: auto;
             height: 80vh;
-            padding: 10vh 0;
+            padding: 0;
             box-sizing: content-box;
             scroll-behavior: smooth;
         }
@@ -175,11 +175,11 @@
 
         .content-image {
             width: 100%;
-            height: 400px;
+            height: 80vh;
             object-fit: cover;
             border: none;
             display: block;
-            scroll-snap-align: center;
+            scroll-snap-align: start;
             scroll-snap-stop: always;
             border-radius: 4px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
