--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
             max-width: 600px;
             order: 1;
             scroll-snap-type: y mandatory;
-            overflow-y: auto;
+            overflow-y: scroll;
             height: 100vh;
             padding: 0;
-            box-sizing: content-box;
+            box-sizing: border-box;
             scroll-behavior: smooth;
         }
 
@@ -184,6 +184,7 @@
             border-radius: 4px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            flex-shrink: 0;
         }
 
         .content-image:hover {
